--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://cdexterior.com" />
     <meta property="og:title" content="Centro Democrático Exterior – Recuperemos a Colombia" />
     <meta property="og:description" content="Únete al movimiento para recuperar a Colombia. Conoce nuestras propuestas, vocerías y cómo participar desde el exterior." />
-    <meta property="og:image" content="https://cdexterior.com/og-image.jpg" />
+    <meta property="og:image" content="https://cdexterior.com/og-image.png" />
     <meta property="og:locale" content="es_ES" />
     
     <!-- Twitter -->
@@ -26,7 +26,7 @@
     <meta property="twitter:url" content="https://cdexterior.com" />
     <meta property="twitter:title" content="Centro Democrático Exterior – Recuperemos a Colombia" />
     <meta property="twitter:description" content="Únete al movimiento para recuperar a Colombia. Conoce nuestras propuestas, vocerías y cómo participar desde el exterior." />
-    <meta property="twitter:image" content="https://cdexterior.com/og-image.jpg" />
+    <meta property="twitter:image" content="https://cdexterior.com/og-image.png" />
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
